examples/test/testpolicy14952.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy14952
  namespace: namespace328
spec:
  podSelector:
    matchLabels:
      key19: value13
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key4: value27
      podSelector:
        matchLabels:
          key13: value42
          key33: value38
          key9: value25
